<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tv_app_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:text="@string/sample_page"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_news_image"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_below="@id/tv_app_name"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardBackground"
        android:contentDescription="@string/image_desc"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_news_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_app_name"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/iv_news_image"
        android:text="@string/sample_title"
        android:textColor="@color/colorTextSecondary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/ib_next"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/widget_button_background"
        android:contentDescription="@string/image_btn_desc_next"
        android:src="@drawable/widget_next"
        tools:ignore="VectorDrawableCompat" />

    <ImageButton
        android:id="@+id/ib_previous"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:layout_toStartOf="@id/ib_next"
        android:background="@drawable/widget_button_background"
        android:contentDescription="@string/image_btn_desc_prev"
        android:src="@drawable/widget_previous"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/info_no_saved_articles"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />
</RelativeLayout>