<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/card_horizontal_margin"
    android:layout_marginRight="@dimen/card_horizontal_margin"
    android:layout_marginTop="@dimen/card_vertical_margin"
    android:background="@color/cardBackground"
    app:cardBackgroundColor="@color/cardview_light_background"
    app:cardCornerRadius="@dimen/card_radius"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.abhishek.newsapp.old.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/iv_news_image"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:contentDescription="@string/image_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@mipmap/ic_news_logo" />

        <TextView
            android:id="@+id/tv_news_source"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/sample_source"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_news_title"
            tools:text="@string/sample_source" />

        <TextView
            android:id="@+id/tv_news_title"
            android:textColor="@android:color/black"
            android:fontFamily=""
            android:textSize="@dimen/primary_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_news_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_title_long" />

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>