<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="article"
            type="com.example.abhishek.newsapp.models.Article" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            tools:context=".ui.news.DetailActivity">

            <ImageView
                android:id="@+id/iv_news_image"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/image_desc"
                app:layout_constraintDimensionRatio="h,16:9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:url="@{article.urlToImage}" />

            <ImageView
                android:id="@+id/iv_save"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/image_desc_save_button"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_news_source"
                app:layout_constraintEnd_toStartOf="@id/iv_share"
                app:layout_constraintTop_toTopOf="@id/tv_time"
                app:srcCompat="@drawable/ic_save" />

            <ImageView
                android:id="@+id/iv_share"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/image_desc_share_button"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_news_source"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"
                app:layout_constraintTop_toTopOf="@id/tv_time"
                app:srcCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="01 Oct 2018 | 02:45PM"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/iv_news_image" />

            <TextView
                android:id="@+id/tv_news_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@{article.source.name}"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/tv_time"
                tools:text="The Washington Post" />

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@{article.title}"
                android:textColor="@color/colorTextSecondary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/tv_news_source"
                tools:text="@string/sample_title" />

            <TextView
                android:id="@+id/tv_news_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.6"
                android:lineSpacingMultiplier="1.3"
                android:text="@{article.description}"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/tv_news_title"
                tools:text="@string/sample_description" />

            <TextView
                android:id="@+id/tv_news_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.6"
                android:lineSpacingMultiplier="1.3"
                android:text="@{article.content}"
                android:textColor="@color/colorTextSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/guideline_right"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@id/tv_news_desc"
                tools:text="@string/sample_description" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_selector"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/button_read_full_story"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_news_content" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp" />

            <android.support.constraint.Barrier
                android:id="@+id/bottom_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="tv_news_desc,tv_news_content,tv_news_title" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>