<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.abhishek.newsapp.utils.BindingUtils" />

        <variable
            name="source"
            type="com.example.abhishek.newsapp.models.Source" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackground"
        android:paddingStart="@dimen/rv_horizontal_offset"
        android:paddingTop="@dimen/rv_vertical_offset"
        android:paddingEnd="@dimen/rv_horizontal_offset"
        android:paddingBottom="@dimen/rv_vertical_offset">

        <ImageView
            android:id="@+id/iv_source_image"
            android:layout_width="82dp"
            android:layout_height="82dp"
            android:contentDescription="@string/image_desc_source_image"
            android:src="@color/cardBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:sourceUrl="@{source.url}" />

        <TextView
            android:id="@+id/tv_source_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{source.name}"
            android:textAppearance="@style/AppTheme.Headline.Title"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/iv_source_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_source" />

        <TextView
            android:id="@+id/tv_source_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{BindingUtils.getSourceName(source.category, source.country)}"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_source_name"
            app:layout_constraintStart_toStartOf="@+id/tv_source_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_source_name"
            tools:text="@string/sample_category" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_drop_down" />

        <TextView
            android:id="@+id/tv_source_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:alpha="1"
            android:lineSpacingMultiplier="1.3"
            android:text="@{source.description}"
            android:textColor="@color/colorTextSecondary"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_source_image" />

    </android.support.constraint.ConstraintLayout>
</layout>